--- a/main.bib
+++ b/main.bib
@@ -35,6 +35,25 @@
 }
 
 
+@article{Hyodo:2011ur,
+  author         = "Hyodo, Tetsuo and Jido, Daisuke",
+  title          = "{The nature of the Lambda(1405) resonance in chiral
+    dynamics}",
+  journal        = "Prog. Part. Nucl. Phys.",
+  volume         = "67",
+  year           = "2012",
+  pages          = "55-98",
+  doi            = "10.1016/j.ppnp.2011.07.002",
+  eprint         = "1104.4474",
+  archivePrefix  = "arXiv",
+  primaryClass   = "nucl-th",
+  SLACcitation   = "%%CITATION = ARXIV:1104.4474;%%"
+}
+
+
+
+
+
 @article{Jido:2009jf,
       author         = "Jido, D. and Oset, E. and Sekihara, T.",
       title          = "{Kaonic production of Lambda(1405) off deuteron target in
@@ -85,5 +104,39 @@
 
 
 
+@article{Dalitz:1959dn,
+  author         = "Dalitz, R. H. and Tuan, S. F.",
+  title          = "{A possible resonant state in pion-hyperon scattering}",
+  journal        = "Phys. Rev. Lett.",
+  volume         = "2",
+  year           = "1959",
+  pages          = "425-428",
+  doi            = "10.1103/PhysRevLett.2.425",
+  SLACcitation   = "%%CITATION = PRLTA,2,425;%%"
+}
 
+@article{Dalitz:1960du,
+  author         = "Dalitz, R. H. and Tuan, S. F.",
+  title          = "{The phenomenological description of -K -nucleon reaction
+    processes}",
+  journal        = "Annals Phys.",
+  volume         = "10",
+  year           = "1960",
+  pages          = "307-351",
+  doi            = "10.1016/0003-4916(60)90001-4",
+  SLACcitation   = "%%CITATION = APNYA,10,307;%%"
+}
+
+
+@article{Akaishi:2002bg,
+  author         = "Akaishi, Yoshinori and Yamazaki, Toshimitsu",
+  title          = "{Nuclear anti-K bound states in light nuclei}",
+  journal        = "Phys. Rev.",
+  volume         = "C65",
+  year           = "2002",
+  pages          = "044005",
+  doi            = "10.1103/PhysRevC.65.044005",
+  reportNumber   = "KEK-PREPRINT-2001-48",
+  SLACcitation   = "%%CITATION = PHRVA,C65,044005;%%"
+}
 
