--- a/main.bib
+++ b/main.bib
@@ -16,6 +16,24 @@
   SLACcitation   = "%%CITATION = ARXIV:1608.03470;%%"
 }
 
+@article{Ohnishi:2015iaq,
+  author         = "Ohnishi, Shota and Ikeda, Yoichi and Hyodo, Tetsuo and
+    Weise, Wolfram",
+  title          = "{Structure of the $\Lambda(1405)$ and the
+    $K^-d\rightarrow\pi\Sigma n$ reaction}",
+  journal        = "Phys. Rev.",
+  volume         = "C93",
+  year           = "2016",
+  number         = "2",
+  pages          = "025207",
+  doi            = "10.1103/PhysRevC.93.025207",
+  eprint         = "1512.00123",
+  archivePrefix  = "arXiv",
+  primaryClass   = "nucl-th",
+  reportNumber   = "YITP-15-112",
+  SLACcitation   = "%%CITATION = ARXIV:1512.00123;%%"
+}
+
 
 @article{Kamano:2014zba,
       author         = "Kamano, H. and Nakamura, S. X. and Lee, T. -S. H. and
@@ -32,6 +50,71 @@
       archivePrefix  = "arXiv",
       primaryClass   = "nucl-th",
       SLACcitation   = "%%CITATION = ARXIV:1407.6839;%%"
+
+}
+
+@article{Moriya:2014kpv,
+      author         = "Moriya, K. and others",
+      title          = "{Spin and parity measurement of the Lambda(1405) baryon}",
+      collaboration  = "CLAS",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "112",
+      year           = "2014",
+      number         = "8",
+      pages          = "082004",
+      doi            = "10.1103/PhysRevLett.112.082004",
+      eprint         = "1402.2296",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "JLAB-PHY-14-1848",
+      SLACcitation   = "%%CITATION = ARXIV:1402.2296;%%"
+}
+
+@article{Jido:2012cy,
+  author         = "Jido, Daisuke and Oset, Eulogio and Sekihara, Takayasu",
+  title          = "{The $K^- d \to \pi \Sigma n$ reaction revisited}",
+  journal        = "Eur. Phys. J.",
+  volume         = "A49",
+  year           = "2013",
+  pages          = "95",
+  doi            = "10.1140/epja/i2013-13095-6",
+  eprint         = "1207.5350",
+  archivePrefix  = "arXiv",
+  primaryClass   = "nucl-th",
+  reportNumber   = "J-PARC-TH-012, KEK-TH-1559, YITP-12-61",
+  SLACcitation   = "%%CITATION = ARXIV:1207.5350;%%"
+
+}
+
+@article{YamagataSekihara:2012yv,
+  author         = "Yamagata-Sekihara, J. and Sekihara, T. and Jido, D.",
+  title          = "{Production of hyperon resonances induced by kaon on a
+    deuteron target}",
+  journal        = "PTEP",
+  volume         = "2013",
+  year           = "2013",
+  pages          = "043D02",
+  doi            = "10.1093/ptep/ptt009",
+  eprint         = "1210.6108",
+  archivePrefix  = "arXiv",
+  primaryClass   = "nucl-th",
+  reportNumber   = "YITP-12-84, J-PARC-TH-0020",
+  SLACcitation   = "%%CITATION = ARXIV:1210.6108;%%"
+}
+
+@article{Shevchenko:2011ce,
+      author         = "Shevchenko, N. V.",
+      title          = "{One- versus two-pole $\bar{K}N - \pi \Sigma$ potential:
+        $K^- d$ scattering length}",
+      journal        = "Phys. Rev.",
+      volume         = "C85",
+      year           = "2012",
+      pages          = "034001",
+      doi            = "10.1103/PhysRevC.85.034001",
+      eprint         = "1103.4974",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-th",
+      SLACcitation   = "%%CITATION = ARXIV:1103.4974;%%"
 }
 
 
@@ -70,22 +153,35 @@
       SLACcitation   = "%%CITATION = ARXIV:0904.3410;%%"
 }
 
-@article{Moriya:2014kpv,
-      author         = "Moriya, K. and others",
-      title          = "{Spin and parity measurement of the Lambda(1405) baryon}",
-      collaboration  = "CLAS",
-      journal        = "Phys. Rev. Lett.",
-      volume         = "112",
-      year           = "2014",
-      number         = "8",
-      pages          = "082004",
-      doi            = "10.1103/PhysRevLett.112.082004",
-      eprint         = "1402.2296",
-      archivePrefix  = "arXiv",
-      primaryClass   = "hep-ex",
-      reportNumber   = "JLAB-PHY-14-1848",
-      SLACcitation   = "%%CITATION = ARXIV:1402.2296;%%"
+
+
+@article{Yamazaki:2007cs,
+  author         = "Yamazaki, Toshimitsu and Akaishi, Yoshinori",
+  title          = "{The Basic anti-K nuclear cluster K- pp and its enhanced
+    formation in the p + p ---> K+ + X reaction}",
+  journal        = "Phys. Rev.",
+  volume         = "C76",
+  year           = "2007",
+  pages          = "045201",
+  doi            = "10.1103/PhysRevC.76.045201",
+  eprint         = "0709.0630",
+  archivePrefix  = "arXiv",
+  primaryClass   = "nucl-th",
+  SLACcitation   = "%%CITATION = ARXIV:0709.0630;%%"
 }
+
+@article{Akaishi:2002bg,
+  author         = "Akaishi, Yoshinori and Yamazaki, Toshimitsu",
+  title          = "{Nuclear anti-K bound states in light nuclei}",
+  journal        = "Phys. Rev.",
+  volume         = "C65",
+  year           = "2002",
+  pages          = "044005",
+  doi            = "10.1103/PhysRevC.65.044005",
+  reportNumber   = "KEK-PREPRINT-2001-48",
+  SLACcitation   = "%%CITATION = PHRVA,C65,044005;%%"
+}
+
 
 @article{Nacher:1998mi,
       author         = "Nacher, J. C. and Oset, E. and Toki, H. and Ramos, A.",
@@ -128,15 +224,4 @@
 }
 
 
-@article{Akaishi:2002bg,
-  author         = "Akaishi, Yoshinori and Yamazaki, Toshimitsu",
-  title          = "{Nuclear anti-K bound states in light nuclei}",
-  journal        = "Phys. Rev.",
-  volume         = "C65",
-  year           = "2002",
-  pages          = "044005",
-  doi            = "10.1103/PhysRevC.65.044005",
-  reportNumber   = "KEK-PREPRINT-2001-48",
-  SLACcitation   = "%%CITATION = PHRVA,C65,044005;%%"
-}
 
