--- a/main.bib
+++ b/main.bib
@@ -224,4 +224,44 @@
 }
 
 
+@article{Sada:2016nkb,
+  author         = "Sada, Y. and others",
+  title          = "{Structure near $K^-$+$p$+$p$ threshold in the in-flight
+    $^3$He$(K^-,\Lambda p)n$ reaction}",
+  collaboration  = "J-PARC E15",
+  journal        = "PTEP",
+  volume         = "2016",
+  year           = "2016",
+  number         = "5",
+  pages          = "051D01",
+  doi            = "10.1093/ptep/ptw040",
+  eprint         = "1601.06876",
+  archivePrefix  = "arXiv",
+  primaryClass   = "nucl-ex",
+  SLACcitation   = "%%CITATION = ARXIV:1601.06876;%%"
+}
+
+@article{Braun:1977wd,
+  author         = "Braun, O. and others",
+  title          = "{New Information About the Kaon-Nucleon-Hyperon Coupling
+    Constants: G/anti-K n Sigma (1197), G / anti-K n Sigma
+    (1385) and G anti-K n Lambda (1405)}",
+  journal        = "Nucl. Phys.",
+  volume         = "B129",
+  year           = "1977",
+  pages          = "1-18",
+  doi            = "10.1016/0550-3213(77)90015-3",
+  reportNumber   = "Print-77-0709 (HEIDELBERG)",
+  SLACcitation   = "%%CITATION = NUPHA,B129,1;%%"
+}
+
+
+
+
+
+@Misc{ortec462,
+   note = "{ORTEC 462 Time Calibrator}",
+}
+
+
 
