--- a/v2/ana.tex
+++ b/v2/ana.tex
@@ -14,6 +14,108 @@ Here, clustering of CDH hits are not being made.
 \subsection{Beam Analysis}
 \subsubsection{Analysis Cuts}
 
+\begin{figure}
+\includegraphics[width=\linewidth]{fig/hist2.pdf}
+\end{figure}
+\begin{figure}
+\includegraphics[width=\linewidth]{fig/hist3.pdf}
+\caption{Phase Space distribution of $\Sigma^+$ mode (left) and $\Sigma^-$ mode (right).}
+\end{figure}
+
+
+\begin{figure}
+\includegraphics[width=\linewidth]{fig/hist4.pdf}
+\caption{Phase Space distribution of $\Sigma^+$ mode (left) and $\Sigma^-$ mode (right).}
+\end{figure}
+
+\begin{figure}
+\includegraphics[width=\linewidth]{fig/hist5.pdf}
+\caption{Phase Space distribution of $\Sigma^+$ mode (left) and $\Sigma^-$ mode (right).}
+\end{figure}
+
+
+\begin{figure}
+\includegraphics[width=\linewidth]{fig/hist6.pdf}
+\caption{Phase Space distribution of $\Sigma^+$ mode (left) and $\Sigma^-$ mode (right).}
+\end{figure}
+
+\begin{figure}
+\includegraphics[width=\linewidth]{fig/hist7.pdf}
+\caption{Phase Space distribution of $\Sigma^+$ mode (left) and $\Sigma^-$ mode (right).}
+\end{figure}
+
+\begin{figure}
+\includegraphics[width=\linewidth]{fig/hist8.pdf}
+\caption{Phase Space distribution of $\Sigma^+$ mode (left) and $\Sigma^-$ mode (right).}
+\end{figure}
+
+\begin{figure}
+\includegraphics[width=\linewidth]{fig/hist9.pdf}
+\caption{Phase Space distribution of $\Sigma^+$ mode (left) and $\Sigma^-$ mode (right).}
+\end{figure}
+
+\begin{figure}
+\includegraphics[width=\linewidth]{fig/hist10.pdf}
+\caption{Phase Space distribution of $\Sigma^+$ mode (left) and $\Sigma^-$ mode (right).}
+\end{figure}
+
+\begin{figure}
+\includegraphics[width=\linewidth]{fig/hist11.pdf}
+\caption{Phase Space distribution of $\Sigma^+$ mode (left) and $\Sigma^-$ mode (right).}
+\end{figure}
+
+\begin{figure}
+\includegraphics[width=\linewidth]{fig/hist12.pdf}
+\caption{Phase Space distribution of $\Sigma^+$ mode (left) and $\Sigma^-$ mode (right).}
+\end{figure}
+
+\begin{figure}
+\includegraphics[width=\linewidth]{fig/hist13.pdf}
+\caption{Phase Space distribution of $\Sigma^+$ mode (left) and $\Sigma^-$ mode (right).}
+\end{figure}
+
+\begin{figure}
+\includegraphics[width=\linewidth]{fig/hist14.pdf}
+\caption{Phase Space distribution of $\Sigma^+$ mode (left) and $\Sigma^-$ mode (right).}
+\end{figure}
+
+\begin{figure}
+\includegraphics[width=\linewidth]{fig/hist15.pdf}
+\caption{Phase Space distribution of $\Sigma^+$ mode (left) and $\Sigma^-$ mode (right).}
+\end{figure}
+
+\begin{figure}
+\includegraphics[width=\linewidth]{fig/hist16.pdf}
+\caption{Phase Space distribution of $\Sigma^+$ mode (left) and $\Sigma^-$ mode (right).}
+\end{figure}
+
+\begin{figure}
+\includegraphics[width=\linewidth]{fig/hist17.pdf}
+\caption{Phase Space distribution of $\Sigma^+$ mode (left) and $\Sigma^-$ mode (right).}
+\end{figure}
+
+\begin{figure}
+\includegraphics[width=\linewidth]{fig/hist18.pdf}
+\caption{Phase Space distribution of $\Sigma^+$ mode (left) and $\Sigma^-$ mode (right).}
+\end{figure}
+
+\begin{figure}
+\includegraphics[width=\linewidth]{fig/hist19.pdf}
+\caption{Phase Space distribution of $\Sigma^+$ mode (left) and $\Sigma^-$ mode (right).}
+\end{figure}
+
+\begin{figure}
+\includegraphics[width=\linewidth]{fig/hist20.pdf}
+\caption{Phase Space distribution of $\Sigma^+$ mode (left) and $\Sigma^-$ mode (right).}
+\end{figure}
+
+\begin{figure}
+\includegraphics[width=\linewidth]{fig/hist21.pdf}
+\caption{Phase Space distribution of $\Sigma^+$ mode (left) and $\Sigma^-$ mode (right).}
+\end{figure}
+
+
+
 \subsubsection{$K^-$ Beam Luminosity}
 
 
@@ -51,9 +153,14 @@ Here, clustering of CDH hits are not being made.
 
 \subsection{Acceptance and Efficiency}
 The total acceptance as a function of momentum transfer of the reaction (q) and invariant mass of ($n\pi^+\pi^-$) (IM), $\epsilon_{acc}(\mbox{q,IM})$ is evaluated by GEANT4 simulation.
+The simulated data is generated uniformly in (q,IM) space as shown in fig. 
+
+The total acceptance is evaluated as follows,
 \[
 \epsilon_{\mbox{acc}}(\mbox{q,IM}) = \frac{\mbox{Number of accepted events}}{\mbox{Number of generated events in each (q,IM) bin }}
 \]
+There are no cuts according to binning of (q,IM) to avoid resolution effect of reconstruction.
+
 The $\epsilon_{\mbox{acc}}(\mbox{q,IM})$ includes the branching ratio of $\Sigma^{\pm}$. 
 
 
