--- a/v2/ana.tex
+++ b/v2/ana.tex
@@ -7,11 +7,13 @@ The following event selection by the CDS is made prior to the beam line analysis
 \begin{itemize}
 \item \# of CDH segments fired == 3
 \item \# of good CDC tracks == 2
-\item $\pi^+$ and $\pi^-$ are found
 \end{itemize}
-Here, clustering of CDH hits are not being made.
+Here, clustering of CDH hits are not being made.\\
+\begin{figure}
+\includegraphics[width=\linewidth]{fig/hist33.pdf}
+\caption{Hit multiplicity of CDH}
+\end{figure}
 
-\subsection{CDH analysis}
 
 
 
@@ -191,20 +193,20 @@ The $\epsilon_{\mbox{acc}}(\mbox{q,IM})$ includes the branching ratio of $\Sigma
 
 \subsection{$\Sigma(1385)^{-}$ analysis}
 $\Sigma^0 \rightarrow \Sigma^\pm\pi^\mp$ contribution (B.R. $=11.7 \pm 1.5 \%$) to the spectra is estimated by $\Lambda \pi$ decay mode (B.R. $=87.0 \pm 1.5 \%)$.
-Because we can not measure $\Sigma^0 \rightarrow \Lambda \pi^0$ decay mode, we measure the following reaction instead,
+Because we can not measure $\Sigma^0 \rightarrow \Lambda \pi^0$ decay mode directly, I have analyzed the following reaction instead,
 \begin{eqnarray}
- K^-d \rightarrow \Sigma(1385)^-p \rightarrow \Lambda \pi^- p \rightarrow p\pi^-\pi^-p.
+ K^-d \rightarrow \Sigma(1385)^-p \rightarrow \Lambda \pi^- p \rightarrow p\pi^-\pi^-p. \quad (87.0 \pm 1.5 \%) 
 \end{eqnarray}
 \subsubsection{Event selection for $K^-d \rightarrow \Sigma(1385)^-p$ analysis}
 \begin{itemize}
 \item \# of CDH segments fired == 3
-\item \# of good CDS track == 3
+\item \# of good CDS tracks == 3
 \item $\pi^+,\pi^-$ and $p$ are found.
 \end{itemize}
 
 \subsubsection{$\Lambda$ selection}
 
-\subsubsection{missing mass spectra of $d(K^-,p\pi^-\pi^-$)"X"}
+\subsubsection{missing mass spectra of $d(K^-,p\pi^-\pi^-)$"X"}
 
 \subsubsection{Acceptance and efficiency of $K^-d \rightarrow \Sigma(1385)^-p$}
 
