--- a/v2/intro.tex
+++ b/v2/intro.tex
@@ -1,5 +1,5 @@
 \section{Introduction}
-The main goal of this analysis is to measure momentum transfer dependence of the cross section of the $\Lambda (1405)$ via the $(K^-,n)$ reaction on deuteron target.
+The main goal of this analysis is to measure momentum transfer dependence of the cross section of the $\Lambda (1405)$ via the $(K^-,n)$ reaction on the deuteron target.
 The momentum transfer dependence can be related to the size of the resonance.
 This analysis is inspired by J-PARC E15 analysis \cite{Sada:2016nkb,Ajimura:2018iyx}.
 
