--- a/v2/detector.tex
+++ b/v2/detector.tex
@@ -7,6 +7,7 @@ The BPC is a circular planer chamber whose size is
 
 \subsection{magnet setting}
 
+\subsection{Deuteron target}
 
 \subsection{DAQ}
 The number of SMP is 11. 
