--- a/v2/main.tex
+++ b/v2/main.tex
@@ -25,6 +25,13 @@
 
 \newcommand{\pS}{\mbox{$\pi^{\pm}\Sigma^{\mp}$}\xspace}
 \newcommand{\reaction}{\mbox{$\Lambda(1405)\rightarrow \pi^{\pm}\Sigma^{\mp}$}\xspace}
+\newcommand{\mev}{\mbox{MeV}\xspace}
+\newcommand{\mevc}{\mbox{MeV/$c~$}\xspace}
+\newcommand{\mevee}{\mbox{MeVee}\xspace}
+\newcommand{\gev}{\mbox{GeV}\xspace}
+\newcommand{\gevc}{\mbox{GeV/$c~$}\xspace}
+\newcommand{\gevcsq}{\mbox{GeV/$c^{2}~$}\xspace}
+\newcommand{\sqs}{\mbox{$\sqrt{s}$}\xspace}
 
 \hypersetup{
   colorlinks=true,       % false:boxed links;true:colored links
@@ -76,7 +83,6 @@
 \section{Experimental setup}
 \input{detector}
 \input{trigger}
-
 
 
 
