--- a/v2/sim.tex
+++ b/v2/sim.tex
@@ -1,9 +1,10 @@
 \section{Simulation}
-The purpose of those MC simulation is as follows:
-\begin{itemize}
-\item Acceptance Correction
-\item Kinematic Fit
-\end{itemize}
+This section details the Monte Calro simulation used for this analysis.
+%The purpose of those MC simulation is as follows:
+%\begin{itemize}
+%\item Acceptance Correction
+%\item Kinematic Fit
+%\end{itemize}
 
 \begin{table}[]
   \centering
@@ -14,16 +15,25 @@ The purpose of those MC simulation is as follows:
   Beam Momentum & 1.000 GeV/c (fixed)  \\ \hline\hline 
   \end{tabular}
 \end{table}
-$\Sigma^+\pi^- n$ and $\Sigma^-\pi^+ n$ events are generated with isotropic phase-space distribution.
 
-\begin{figure}
-\includegraphics[width=0.45\linewidth]{PSSp.pdf}
-\includegraphics[width=0.45\linewidth]{PSSm.pdf}
-\caption{Phase Space distribution of $\Sigma^+$ mode (left) and $\Sigma^-$ mode (right).}
-\end{figure}
+\subsection{CDS configuration}
+The Solenoid magnet modeled in GEANT4 is updated from previous analysis\cite{hashimoto:2013dt,sada:2017dt,yamaga:2018dt}.
+From this analysis, the Bobbin layer and the Coil are implemented in Doraemon to evaluate the effect of material to the neutron analysis.
+ 
 
 
 
 
-\subsection{Covarinace matrix of the kinematic fit}
+%$\Sigma^+\pi^- n$ and $\Sigma^-\pi^+ n$ events are generated with isotropic phase-space distribution.
+
+%\begin{figure}
+%\includegraphics[width=0.45\linewidth]{PSSp.pdf}
+%\includegraphics[width=0.45\linewidth]{PSSm.pdf}
+%\caption{Phase Space distribution of $\Sigma^+$ mode (left) and $\Sigma^-$ mode (right).}
+%\end{figure}
+
+
+
+
+%\subsection{Covariance matrix of the kinematic fit}
 
