--- a/v2/ana.tex
+++ b/v2/ana.tex
@@ -148,9 +148,13 @@ Here, clustering of CDH hits are not being made.\\
 \item [isolation cuts] no hits on neighboring CDH segments
 \end{itemize}
 
+the position resolution of CDH was evaluated by charged pion tracks. 2.7 cm in phi direction and 2.1 cm in z direction.
+the TOF resolution of T0-CDH is evaluated as 187 ps.
+
+
 \subsection{Missing mass analysis in $d(K^-,\pi^+\pi^-n)"X"$ reaction}
 
-\subsection{$K^0$ subtraction}
+
 
 
 \subsection{$\Sigma^{\pm}$ identification}
