--- a/main.tex
+++ b/main.tex
@@ -4,105 +4,107 @@
 \usepackage[english]{babel}
 \usepackage[utf8x]{inputenc}
 \usepackage[T1]{fontenc}
-
+%\usepackage{ebgaramond}
+%\usepackage{kpfonts}
 %% Sets page size and margins
 \usepackage[a4paper]{geometry}
 
 %% Useful packages
+\usepackage{ascmac}
+\newdimen\tbaselineshift
 \usepackage{amsmath}
 \usepackage{graphicx}
+\usepackage{xspace}
+\usepackage{color}
+\usepackage[titletoc,title]{appendix}
+
 \usepackage[colorinlistoftodos]{todonotes}
 \usepackage[colorlinks=true, allcolors=blue]{hyperref}
+\addto{\captionsenglish}{\renewcommand{\abstractname}{Preface}}
+%\newcommand{\lam}{\mbox{\Lambda (1405)}\xspace}
 
-\title{E31-2nd analysis note}
+\newcommand{\pS}{\mbox{$\pi^{\pm}\Sigma^{\mp}$}\xspace}
+\newcommand{\reaction}{\mbox{$\Lambda(1405)\rightarrow \pi^{\pm}\Sigma^{\mp}$}\xspace}
+\newcommand{\mev}{\mbox{MeV}\xspace}
+\newcommand{\mevc}{\mbox{MeV/$c~$}\xspace}
+\newcommand{\mevee}{\mbox{MeVee}\xspace}
+\newcommand{\gev}{\mbox{GeV}\xspace}
+\newcommand{\gevc}{\mbox{GeV/$c~$}\xspace}
+\newcommand{\gevcsq}{\mbox{GeV/$c^{2}~$}\xspace}
+\newcommand{\sqs}{\mbox{$\sqrt{s}$}\xspace}
+
+\hypersetup{
+  colorlinks=true,       % false:boxed links;true:colored links
+    linkcolor=blue,          % color of internal links (change box color with linkbordercolor)
+    citecolor=green,        % color of links to bibliography
+    filecolor=magenta,      % color of file links
+    urlcolor=cyan           % color of external links
+}
+
+
+\graphicspath{
+  %
+  {./},%
+  {./fig/}%
+}
+
+
+
+%\newcommand{\updateinfo}[1][\today]{\par\vfill\hfill{\scriptsize\color{gray}Last updated on #1}}
+\newcommand{\updateinfo}[1][\today]{{\par{\color{gray}Last updated on #1}}}
+\pagenumbering{roman}
+
+\title{Momentum transfer dependence of the cross section of the $\Lambda(1405)$ in E31-2nd }
 \author{Hidemitsu Asano}
+\date{}
+
+\makeindex
 
 \begin{document}
 \maketitle
-
+\vspace{4em}
 \begin{abstract}
-This note details the analysis of E31-2nd.${K^-(d,X)}\pi^{\pm}\Sigma^{\mp}$ mode.
-
+\noindent This note details the analysis of the $\Lambda(1405)\rightarrow \pS $ invariant mass spectra produced in the $d(K^-,\Lambda(1405))n$ reaction in E31-2nd. The main goal of this analysis is to measure the cross section of the $\Lambda(1405)$ vs the momentum transfer of the reaction.
 \end{abstract}
+\tableofcontents
 
-\section{Introduction}
+\clearpage
+\listoffigures
 
-Your introduction goes here! Some examples of commonly used commands and features are listed below, to help you get started. If you have a question, please use the help menu (``?'') on the top bar to search for help or ask us a question. 
+\clearpage
+\listoftables
+
+\clearpage
+\pagenumbering{arabic}
+
+\input{intro}
+
 
 \section{Experimental setup}
-
-\section{Detector Calibration}
-
-\subsection{TDC calibration}
-The gain and offset of TDC are calibrated by a time calibrator module (ORTEC 462 \cite{ortec462}). The
-
-\subsection{chamber X-T curve}
+\input{detector}
+\input{trigger}
 
 
-\section{Run QA}
+
+\input{sim}
 
 
-\section{Simulation}
-
-Comments can be added to your project by clicking on the comment icon in the toolbar above. % * <john.hammersley@gmail.com> 2016-07-03T09:54:16.211Z:
-%
-% Here's an example comment!
-%
-To reply to a comment, simply click the reply button in the lower right corner of the comment, and you can close them when you're done.
-
-%Comments can also be added to the margins of the compiled PDF using the todo command\todo{Here's a comment in the margin!}, as shown in the example on the right. You can also add inline comments:
-
-%\todo[inline, color=green!40]{This is an inline comment.}
-
-\subsection{How to add Tables}
-
-Use the table and tabular commands for basic tables --- see Table~\ref{tab:widgets}, for example. 
-
-\begin{table}
-\centering
-\begin{tabular}{l|r}
-Item & Quantity \\\hline
-Widgets & 42 \\
-Gadgets & 13
-\end{tabular}
-\caption{\label{tab:widgets}An example table.}
-\end{table}
-
-\subsection{How to write Mathematics}
-
-\LaTeX{} is great at typesetting mathematics. Let $X_1, X_2, \ldots, X_n$ be a sequence of independent and identically distributed random variables with $\text{E}[X_i] = \mu$ and $\text{Var}[X_i] = \sigma^2 < \infty$, and let
-\[S_n = \frac{X_1 + X_2 + \cdots + X_n}{n}
-      = \frac{1}{n}\sum_{i}^{n} X_i\]
-denote their mean. Then as $n$ approaches infinity, the random variables $\sqrt{n}(S_n - \mu)$ converge in distribution to a normal $\mathcal{N}(0, \sigma^2)$.
+\input{ana}
 
 
-\subsection{How to create Sections and Subsections}
 
-Use section and subsections to organize your document. Simply use the section and subsection buttons in the toolbar to create them, and we'll handle all the formatting and numbering automatically.
 
-\subsection{How to add Lists}
 
-You can make lists with automatic numbering \dots
+\input{discussion}
 
-\begin{enumerate}
-\item Like this,
-\item and like this.
-\end{enumerate}
-\dots or bullet points \dots
-\begin{itemize}
-\item Like this,
-\item and like this.
-\end{itemize}
 
-\subsection{How to add Citations and a References List}
+\begin{appendices}
+\input{goodrun}
 
-You can upload a \verb|.bib| file containing your BibTeX entries, created with JabRef; or import your \href{https://www.overleaf.com/blog/184}{Mendeley}, CiteULike or Zotero library as a \verb|.bib| file. You can then cite entries from it, like this: \cite{greenwade93}. Just remember to specify a bibliography style, as well as the filename of the \verb|.bib|.
+\end{appendices}
 
-You can find a \href{https://www.overleaf.com/help/97-how-to-include-a-bibliography-using-bibtex}{video tutorial here} to learn more about BibTeX.
 
-We hope you find Overleaf useful, and please let us know if you have any feedback using the help menu above --- or use the contact form at \url{https://www.overleaf.com/contact}!
-
-\bibliographystyle{alpha}
-\bibliography{sample}
+\bibliographystyle{unsrt}
+\bibliography{main.bib}
 
 \end{document}
